# geometrancer

./: CMakeLists.txt  README.md  conanfile.txt
apps/: CMakeLists.txt  translator_main.cpp
src/: CMakeLists.txt  eigen_triangulation.h  io_utilities.cpp  io_utilities.h  utils.cpp  utils.h
unit_tests/: CMakeLists.txt  ack.cpp  assimp_lib_tests.cpp  io_utilities_test.cpp
